Current landing page.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,66 @@
-The Splash Landing page.
+<!doctype html>
+<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+	<title>Splash</title>
+	<meta name="description" content="Your interests within reach.">
+	<meta name="author" content="">
+
+	<meta name="viewport" content="width=device-width">
+
+	<link rel="stylesheet" href="css/style.css">
+
+	<script src="js/libs/modernizr-2.5.3.min.js"></script>
+	
+	<meta property="og:title" content="Splash - Discover the world around you." /><meta property="og:type" content="company" /><meta property="og:site_name" content="Splash" /><meta property="og:url" content="http://splash.io" /><meta property="og:image" content="null" /><meta property="og:description" content="I just applied for early access to Splash!" />
+	
+</head>
+<body>
+<header>
+
+</header>
+<div role="main">
+
+</div>
+<footer>
+
+</footer>
+
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.2.min.js"><\/script>')</script>
+<script src="js/splash.js"></script>
+
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-34995006-1']);
+  _gaq.push(['_setDomainName', 'splash.io']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+
+
+    <!-- This is the background image -->
+	<img id="bgimg" src="img/bg.jpg" />
+	<!-- Here the "real" body starts, where you can put your website -->
+	<div id="realBody">
+		<div id="logo"></div>
+		<div id="launchrock">
+        <div rel="Y4JA0YJK" class="lrdiscoverwidget" data-logo="off" data-background="off" data-share-url="splash.io" data-css=""></div><script type="text/javascript" src="http://launchrock-ignition.s3.amazonaws.com/ignition.1.1.js"></script>
+    </div>
+    </div>
+    
+    
+</body>
+</html>
