added mail icon span

--- a/splash/index.html
+++ b/splash/index.html
@@ -48,7 +48,8 @@
     	<!-- end #notify -->
     	
     	<div id="notify">
-        <div rel="Y4JA0YJK" class="lrdiscoverwidget" data-logo="off" data-background="off" data-share-url="splash.io" data-css=""></div><script type="text/javascript" src="http://launchrock-ignition.s3.amazonaws.com/ignition.1.1.js"></script>
+        <span id="mail-icon"></span>
+	    <div rel="Y4JA0YJK" class="lrdiscoverwidget" data-logo="off" data-background="off" data-share-url="splash.io" data-css=""></div><script type="text/javascript" src="http://launchrock-ignition.s3.amazonaws.com/ignition.1.1.js"></script>
     	</div>
     	
     </div>
