added message to html

--- a/splash/index.html
+++ b/splash/index.html
@@ -48,9 +48,11 @@
     	<!-- end #notify -->
     	
     	<div id="notify">
-        <span id="mail-icon"></span>
-	    <div rel="Y4JA0YJK" class="lrdiscoverwidget" data-logo="off" data-background="off" data-share-url="splash.io" data-css=""></div><script type="text/javascript" src="http://launchrock-ignition.s3.amazonaws.com/ignition.1.1.js"></script>
+        	<span id="mail-icon"></span>
+        	<div rel="Y4JA0YJK" class="lrdiscoverwidget" data-logo="off" data-background="off" data-share-url="splash.io" data-css=""></div><script type="text/javascript" src="http://launchrock-ignition.s3.amazonaws.com/ignition.1.1.js"></script>
+        	<div id="launch-message">Entering private beta January '13. Subscribe to our mailing list to be notified when we launch.</div>
     	</div>
+    	<!-- end #notify -->
     	
     </div>
 
