--- a/splash/index.html
+++ b/splash/index.html
@@ -31,7 +31,7 @@
 	    	}(document, 'script', 'facebook-jssdk'));
 	    </script>
 
-    	<div id="logo"></div>
+	    <div id="logo"></div>
     	<div id="tagline">Your interests, nearby.</div>
     	<div id="iphone"></div>
     	<!-- begin #notify -->
@@ -53,6 +53,8 @@
         	<div id="launch-message">Entering private beta January '13. Subscribe to our mailing list to be notified when we launch.</div>
     	</div>
     	<!-- end #notify -->
+    	
+    	<div class="lrhidden lrcontent" id="dlrpagesubmit-Y4JA0YJK" style="display: block;"><p id="invite-label-Y4JA0YJK" class="invite-label" style="text-align:center"><span>Why not share the love?</span></p><p id="live-stats-Y4JA0YJK" class="live-stats"></p><div class="like"><div id="sharebuttons-Y4JA0YJK"><span id="facebook-Y4JA0YJK" class="facebook" style="display: none;">[ Facebook ]</span><span id="twitter-Y4JA0YJK" class="twitter" style=""><iframe allowtransparency="true" frameborder="0" scrolling="no" src="http://platform.twitter.com/widgets/tweet_button.1355514129.html#_=1355793824747&amp;count=none&amp;id=twitter-widget-1&amp;lang=en&amp;original_referer=http%3A%2F%2Fwww.splash.io%2Fsplash%2F&amp;size=m&amp;text=I%20just%20applied%20for%20early%20access%20to%20Splash!&amp;url=http%3A%2F%2Fsplash.io%3FlrRef%3DlujVx&amp;via=getsplashapp" class="twitter-share-button twitter-count-none" style="width: 56px; height: 20px;" title="Twitter Tweet Button" data-twttr-rendered="true"></iframe></span><span id="linkedIn-Y4JA0YJK" class="linkedIn" style="display: none;">[ LinkedIn ]</span><span id="tumblr-Y4JA0YJK" class="tumblr" style="display: none;">[ tumblr ]</span></div></div><div class="share-via-email" style="display: none;"></div><div class="share-link"><label>Share Link</label><div class="field-holder"><input type="text" id="shareurl-Y4JA0YJK" title="http://launchrock.com/28n2je" value="http://launchrock.com/28n2je" class="field blink" readonly="readonly" style=""></div></div><div id="footerLinks-Y4JA0YJK" class="social-links"><ul><li id="blogLink-Y4JA0YJK" style="display: none;"></li><li id="twitterLink-Y4JA0YJK"><a href="http://twitter.com/getsplashapp" target="_blank">Twitter</a></li><li id="facebookLink-Y4JA0YJK" style="display: none;"></li></ul></div></div>
     	
     </div>
 
