Added images and opengraph changes

--- a/splash/index.html
+++ b/splash/index.html
@@ -16,6 +16,11 @@
         
         <script type="text/javascript" src="//use.typekit.net/siy1zbg.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+        
+        <meta property="og:title" content="Splash" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="http://www.splash.io/splash" />
+        <meta property="og:image" content="http://splash.io/splash/img/og.png" />
 
     </head>
     <body>
