Updated OG tags

--- a/splash/index.html
+++ b/splash/index.html
@@ -7,7 +7,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title></title>
-        <meta name="description" content="">
+        <meta name="description" content="Splash helps you share your unique perspective on local news and events. Entering private beta in January 2013.">
         <meta name="viewport" content="width=device-width">
 
         <link rel="stylesheet" href="css/normalize.min.css">
@@ -21,6 +21,7 @@
         <meta property="og:type" content="website" />
         <meta property="og:url" content="http://www.splash.io/splash" />
         <meta property="og:image" content="http://splash.io/splash/img/og.png" />
+        <meta property="fb:app_id" content="480341711976152" />
 
     </head>
     <body>
