Fixed further OG errors

--- a/splash/index.html
+++ b/splash/index.html
@@ -18,8 +18,9 @@
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
         
         <meta property="og:title" content="Splash" />
+        <meta property="og:description" content="Splash helps you share your unique perspective on local news and events. Entering private beta in January 2013." />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="http://www.splash.io/splash" />
+        <meta property="og:url" content="http://splash.io/splash" />
         <meta property="og:image" content="http://splash.io/splash/img/og.png" />
         <meta property="fb:app_id" content="480341711976152" />
 
