--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     	<div id="notify">
         	<span id="mail-icon"></span>
         	<div rel="Y4JA0YJK" class="lrdiscoverwidget" data-logo="off" data-background="off" data-share-url="splash.io" data-css=""></div><script type="text/javascript" src="http://launchrock-ignition.s3.amazonaws.com/ignition.1.1.js"></script>
-        	<div id="launch-message">Entering private beta January '13. Subscribe to our mailing list to be notified when we launch.</div>
+        	<div id="launch-message">Entering private beta January '13. Subscribe to our mailing list to request an invite.</div>
     	</div>
     	<!-- end #notify -->
     	
